--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,18 @@
 .read-the-docs {
   color: #888;
 }
+.App {
+  font-family: sans-serif;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.padding-0 {
+  padding: 0;
+}
+
+.teal-text {
+  color: teal;
+}
